# MiniSnake

./: .gitignore  CMakeLists.txt  README.md  look_ahead_ai.c  shortest_distance_ai.c  snake  snake.c  snake.h  snake_ascii.c  snake_opengl.c
examples/ascii/: CMakeLists.txt  snake_ascii.c
examples/opengl/: CMakeLists.txt  body_avoiding_ai.c  highScore.c  highScore.h  karl_ai.c  look_ahead_ai.c  maze_ai.c  path_plotting_ai.c  planning_ai.c  shortest_distance_ai.c  snake_opengl.c
examples/simple/: CMakeLists.txt  snake_simple.c
include/: snake.h  snake.h.gch
src/: snake.c
